<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/stateName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city_name"
        android:textAllCaps="true"
        android:textColor="#082C93"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/active"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cured"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/death"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/activeno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/active_count"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="18sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/curedNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/curedcount"
                android:textColor="#27752A"
                android:textSize="18sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/deathNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deathcount"
                android:textColor="#554B4B"
                android:textSize="18sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/totalCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/totalcount"
                android:textColor="@color/teal_700"
                android:textSize="18sp"
                android:textStyle="bold"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/upward"
                />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/upward"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/upward"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/activetoday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/actToday"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="18sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/curedToday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/curedToday"
                android:textColor="#27752A"
                android:textSize="18sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/deathToday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/curedToday"
                android:textColor="#554B4B"
                android:textSize="18sp"
                android:textStyle="bold"
                />

        </LinearLayout>

    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.842"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.998" />

</LinearLayout>